# MusicLibraryManager

./: .editorconfig  .gitignore  .gitmodules  README.md
AudioTools/: AudioFileConvert.cmd  AudioFilesCompare.cmd  ConvertFlacToAlac.cmd  ConvertWmaToM4a.cmd  FlacToAlac.cmd  GetMediaMetaData.cmd  MediaGetRawAudio.cmd  WmaUpdate.cmd  audioFileAlacToFlac.cmd  audioFileConvertM4a.cmd  audioFileFlacToAlac.cmd  audioFileGetRaw.cmd  audioFileWmaToM4a.cmd  audioFilesCompare.cmd  audioFilesWavCompare.cmd  compare_audio.bat
DevelopmentTools/: DebugPrepare.cmd  MusicLibrary.msbuild.xml  MusicManCopyToCommands.cmd  build.cmd  compare_audio_detailed.bat  convert_audio.bat  convert_wma_to_m4a (1).bat  iTunesInstall.cmd
Documentation/: MusicLibrary.txt
MediaScripts/: MediaSaveM4a.cmd  MediaWavCompare.cmd  MusicManCopyToCommands.cmd  MusicManTests.cmd  audioFileConvertM4a.cmd  audioFilesCompare.cmd  audioFilesCompare.sh  compareAudioFiles.cmd  convertAutio.cmd  convertLossless.cmd  convertWmatoM4a.cmd  convert_lossless.bat  iTunesInstall.cmd
MusicClean/: Program.cs
MusicUtility/: MusicUtility.cs  MusicUtility.csproj
SourceCode/: .editorconfig  CMakeLists.txt  CodeAnalysis.ruleset  Directory.Build.props  Music.sln  MusicManager.sln  MusicManager.slnx  stylecop.json
SourceCode/AudioSignature/: AudioSignature.cpp  AudioSignature.h  AudioSignature.vcxproj  AudioSignature.vcxproj.filters  CMakeLists.txt
SourceCode/FingerPrinter/: CMakeLists.txt  FingerPrinter.cpp  FingerPrinter.h  FingerPrinter.vcxproj  FingerPrinter.vcxproj.filters
Support/: AcusstIdResponse.Sample.json  (+10 more)
(+185 files in other folders)
